--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         node-version: '18.x'
         cache: 'npm'
-        cache-dependency-path: ~/package-lock.json
+        cache-dependency-path: ../../package-lock.json
     - run: npm install
 
   webpackBuild:
